Revert "Auto stash before merge of "master" and "origin/master""
This reverts commit 699cc93bf6d02b477ce667e82a3b3e46dd5bb6ab.

--- a/modules/otherDBs/states.htm
+++ b/modules/otherDBs/states.htm
@@ -21,8 +21,8 @@
             </b>
 		    <div>
                 {{state.capital}} / {{state.city}}<br />
-		        size: {{state.size | number : 0}} sq miles<br />
- 		        people: {{state.people | number : 0}} ({{state.people / state.size | number : 1}} / sq mile)<br />
+		        size: {{state.size}} sq miles<br />
+ 		        people: {{state.people}}<br />
            </div>
         </div>
     </li>
