Landing Page: Favorites
Default route is to favorites.
Sidebar defaults to selecting favorites.
Only one treeview is open by default.
Updated comments to clarify which sidebar.

--- a/index.htm
+++ b/index.htm
@@ -81,7 +81,7 @@
                 </div>
             </form>
 
-            <!-- Sidebar Menu -->
+            <!-- Sidebar Menu (Left) -->
             <ul class='sidebar-menu'>
                 <li class='treeview active'>
                     <a href=''><i class='fa fa-link'></i> Views
@@ -89,14 +89,14 @@
                             <i class='fa fa-angle-left pull-right'></i>
                         </span>
                     </a>
-                    <ul class='treeview-menu'>
+                    <ul class='treeview-menu menu-open'>
                         <li><a href='#!/results/recent-adds'><i class="fa fa-users"></i> Recent Adds</a></li>
-                        <li><a href='#!/results/favorites'><i class="fa fa-star"></i> Favorites</a></li>
+                        <li class='active'><a href='#!/results/favorites'><i class="fa fa-star"></i> Favorites</a></li>
 						<li><a href='#!/results/recent-mods'><i class="fa fa-users"></i> Recent Mods</a></li>
                     </ul>
                 </li>
 
-                <li class='treeview active'>
+                <li class='treeview'>
                     <a href=''><i class='fa fa-gear'></i> Tools
                         <span class='pull-right-container'>
                             <i class='fa fa-angle-left pull-right'></i>
@@ -131,7 +131,7 @@
 		<a href='../../kb/oracle.php?app=quotes' target='_blank'>Quotes</a>
 	</footer>
 
-    <!-- Control Sidebar -->
+    <!-- Control Sidebar (Right) -->
     <aside class="control-sidebar control-sidebar-dark">
 		<div ng-include src="'modules/control-sidebar.htm'"></div>
     </aside>
