--- a/index.htm
+++ b/index.htm
@@ -103,9 +103,9 @@
                         </span>
                     </a>
                     <ul class='treeview-menu'>
-						<li><a href='#!/tools'><i class="fa fa-cog"></i> Utilities</a></li>
-                        <li><a href='#!/tags'><i class='fa fa-tag'></i> Tag</a></li>
-						<li><a href='#!/import'><i class='fa fa-download'></i> Import</a></li>
+						<li><a href='#!/tools/utilities'><i class="fa fa-cog"></i> Utilities</a></li>
+                        <li><a href='#!/tools/tags'><i class='fa fa-tag'></i> Tag</a></li>
+						<li><a href='#!/tools/import'><i class='fa fa-download'></i> Import</a></li>
                     </ul>
                 </li>
 
@@ -168,10 +168,11 @@
     <script src="modules/login/loginController.js"></script>
     <script src="modules/navigation/navigationController.js"></script>
     <script src="modules/contact/contactController.js"></script>
-    <script src="modules/tools/toolsController.js"></script>
     <script src="modules/results/resultsController.js"></script>
     <script src="modules/detail/detailController.js"></script>
     <script src="modules/events/eventsController.js"></script>
+    <script src="modules/tools/_toolsModule.js"></script>
+    <script src="modules/tools/importController.js"></script>
     <script src="modules/otherDBs/otherControllers.js"></script>
 
     <!-- Angular Main Module -->
