--- a/index.htm
+++ b/index.htm
@@ -163,7 +163,14 @@
     <!-- Angular Filters Module -->
     <script src="filters/filters.js"></script>
     <!-- Angular Directives Module -->
-    <script src="directives/directives.js"></script>
+    <script src="directives/_directivesModule.js"></script>
+    <script src="directives/alertBox.js"></script>
+    <script src="directives/contactImage.js"></script>
+    <script src="directives/contactTags.js"></script>
+    <script src="directives/mgClemson.js"></script>
+    <script src="directives/mgGoogle.js"></script>
+    <script src="directives/mgLinkedIn.js"></script>
+    <script src="directives/pinfo.js"></script>
     <!-- Individual Modules -->
     <script src="modules/login/loginController.js"></script>
     <script src="modules/navigation/navigationController.js"></script>
