--- a/index.htm
+++ b/index.htm
@@ -161,7 +161,9 @@
     <script src="services/loginService.js"></script>
     <script src="services/jwtService.js"></script>
     <!-- Angular Filters Module -->
-    <script src="filters/filters.js"></script>
+    <script src="filters/_filtersModule.js"></script>
+    <script src="filters/ageFilter.js"></script>
+    <script src="filters/bornFilter.js"></script>
     <!-- Angular Directives Module -->
     <script src="directives/_directivesModule.js"></script>
     <script src="directives/alertBox.js"></script>
