completed folder reorganization; modified tool tips

--- a/index.htm
+++ b/index.htm
@@ -155,11 +155,11 @@
     <script src='https://cdnjs.cloudflare.com/ajax/libs/angular-filter/0.5.16/angular-filter.min.js'></script>
 
     <!-- Angular Services Module -->
-    <script src='services/_services.js'></script>
-    <script src='services/alertService.js'></script>
-    <script src='services/queryService.js'></script>
-    <script src='services/loginService.js'></script>
-    <script src='services/jwtService.js'></script>
+    <script src='modules/_services.js'></script>
+    <script src='modules/navigation/alertService.js'></script>
+    <script src='modules/contacts/queryService.js'></script>
+    <script src='modules/login/loginService.js'></script>
+    <script src='modules/login/jwtService.js'></script>
     <!-- Angular Filters and Directives-->
     <script src='shared/_filters.js'></script>
     <script src='shared/_appDirectives.js'></script>
@@ -167,10 +167,10 @@
     <!-- Individual Modules -->
     <script src='modules/login/loginController.js'></script>
     <script src='modules/navigation/navigationController.js'></script>
-    <script src='modules/contact/contactController.js'></script>
-    <script src='modules/results/resultsController.js'></script>
-    <script src='modules/detail/detailController.js'></script>
-    <script src='modules/events/eventsController.js'></script>
+    <script src='modules/contacts/resultsController.js'></script>
+    <script src='modules/contacts/detailController.js'></script>
+    <script src='modules/contacts/eventsController.js'></script>
+    <script src='modules/contacts/contactController.js'></script>
     <script src='modules/tools/_toolsModule.js'></script>
     <script src='modules/tools/importController.js'></script>
     <script src='modules/otherDBs/otherControllers.js'></script>
