--- a/shared/contactGoogle.htm
+++ b/shared/contactGoogle.htm
@@ -1,1 +1,1 @@
-<a ng-href='{{GoogleLink}}' target='_blank'><img src='assets/img/icons/google.png'/></a>
+<a ng-href='{{GoogleLink}}' title='Google search' target='_blank'><img src='assets/img/icons/google.png'/></a>
