--- a/shared/contactClemson.htm
+++ b/shared/contactClemson.htm
@@ -1,1 +1,1 @@
-<a ng-href='{{ClemsonLink}}' target='_blank'><img src='assets/img/icons/clemson.png'/></a>
+<a ng-href='{{ClemsonLink}}' title='Clemson directory search' target='_blank'><img src='assets/img/icons/clemson.png'/></a>
