--- a/shared/contactLinkedIn.htm
+++ b/shared/contactLinkedIn.htm
@@ -1,1 +1,1 @@
-<a ng-href='{{linkedInLink}}' target='_blank'><img src='assets/img/icons/linkedin.gif'/></a>
+<a ng-href='{{linkedInLink}}' title='LinkedIn search' target='_blank'><img src='assets/img/icons/linkedin.gif'/></a>
