reorganizing files and directories
added config.js not in replication

--- a/index.htm
+++ b/index.htm
@@ -161,9 +161,9 @@
     <script src='modules/login/loginService.js'></script>
     <script src='modules/login/jwtService.js'></script>
     <!-- Angular Filters and Directives-->
-    <script src='shared/_filters.js'></script>
+    <script src='modules/_filters.js'></script>
     <script src='shared/_appDirectives.js'></script>
-    <script src='shared/_contactDirectives.js'></script>
+    <script src='modules/contacts/_contactDirectives.js'></script>
     <!-- Individual Modules -->
     <script src='modules/login/loginController.js'></script>
     <script src='modules/navigation/navigationController.js'></script>
@@ -176,7 +176,8 @@
     <script src='modules/otherDBs/otherControllers.js'></script>
 
     <!-- Angular Main Module -->
-    <script src="meshApp.js"></script>
+    <script src='meshApp.js'></script>
+    <script src='config/constants.js'></script>
 
 </div>
 </body>
