--- a/index.htm
+++ b/index.htm
@@ -46,7 +46,9 @@
             <div class="navbar-custom-menu">
                 <ul class="nav navbar-nav">
                     <!-- Control Sidebar Toggle Button -->
-                    <li><a href="" data-toggle="control-sidebar"><i class="fa fa-gears"></i></a></li>
+                   <li><a href="" ng-show="isRemote()"><i class="fa fa-bomb"></i></a></li>
+                   <li><a href="" ng-show="!isRemote()"><i class="fa fa-bomb"></i></a></li>
+                   <li><a href="" data-toggle="control-sidebar"><i class="fa fa-gears"></i></a></li>
                 </ul>
             </div>
         </nav>
@@ -109,6 +111,7 @@
                     </ul>
                 </li>
 
+                <li><a href='#!/addcontact'><i class="fa fa-plus-square"></i> Add Contact</a></li>
                 <li><a href='#!/events'><i class="fa fa-tasks"></i> Events</a></li>
                 <li><a href='#!/login'><i class='fa fa-lock'></i> Login/Logout</a></li>
             </ul>
@@ -165,19 +168,20 @@
     <script src='shared/_appDirectives.js'></script>
     <script src='modules/contacts/_contactDirectives.js'></script>
     <!-- Individual Modules -->
-    <script src='modules/login/loginController.js'></script>
     <script src='modules/navigation/navigationController.js'></script>
+    <script src='modules/login/loginController.js'></script>
     <script src='modules/contacts/resultsController.js'></script>
     <script src='modules/contacts/detailController.js'></script>
     <script src='modules/contacts/eventsController.js'></script>
     <script src='modules/contacts/contactController.js'></script>
+    <script src='modules/contacts/addContactController.js'></script>
     <script src='modules/tools/_toolsModule.js'></script>
     <script src='modules/tools/importController.js'></script>
     <script src='modules/otherDBs/otherControllers.js'></script>
 
     <!-- Angular Main Module -->
     <script src='meshApp.js'></script>
-    <script src='config/constants.js'></script>
+    <script src='shared/constants.js'></script>
 
 </div>
 </body>
