--- a/modules/tools/utilities.htm
+++ b/modules/tools/utilities.htm
@@ -2,6 +2,8 @@
 <a href='http://my.clemson.edu/#/directory' target='_blank'>Clemson Phonebook</a><br />
 <input type='text' id='clemName'/> <button type="button" onclick="window.open( 'http://my.clemson.edu/#/directory/search/'+getElementById('clemName').value,'_blank')">Clemson Lookup</button>
 
+<div><a href='http://fontawesome.io/cheatsheet' target='_blank'>Font Awesome Icons</a></div>
+
 <!-- window.location = 'http://
  document.location.href = "report.html" -->
 
