Toggle API Endpoing (Stage 1)
Defaults to REMOTE api.
No toggle switch currently implemented.
Done through questionably named "toggleService"

--- a/index.htm
+++ b/index.htm
@@ -159,6 +159,7 @@
 
     <!-- Angular Services Module -->
     <script src='modules/_services.js'></script>
+    <script src='shared/toggleService.js'></script>
     <script src='modules/navigation/alertService.js'></script>
     <script src='modules/contacts/queryService.js'></script>
     <script src='modules/login/loginService.js'></script>
