--- a/modules/contacts/addContact.htm
+++ b/modules/contacts/addContact.htm
@@ -20,6 +20,10 @@
         <input id="sex_input" type="radio" class="validate" ng-model="contact.sex" value='Female'> Female
     </div>
     <div class="input-field">
+        <label for="born_input">Pix</label>
+        <input id="born_input" type="text" class="validate" ng-model="contact.pix">
+    </div>
+    <div class="input-field">
         <label for="tags_input">Tags</label>
         <input id="tags_input" type="text" class="validate" ng-model="contact.tags">
     </div>
