styled input form; added myLife directive

--- a/modules/contacts/detail.htm
+++ b/modules/contacts/detail.htm
@@ -12,7 +12,8 @@
 			<div style='padding-top: 3px'>
 			<contact-linked-in fname='contact.fname' lname='contact.lname'></contact-linked-in>
 			<contact-clemson fname='contact.fname' lname='contact.lname'></contact-clemson>
-			<contact-google fname='contact.fname' lname='contact.lname'></contact-google></div>
+			<contact-google fname='contact.fname' lname='contact.lname'></contact-google>
+			<contact-my-life fname='contact.fname' lname='contact.lname'></contact-my-life></div>
 
 			<div style='padding-top: 3px'>{{contact.born | bornFilter}}</div>
 			<div style='padding-top: 3px'><contact-tags contact='contact'></contact-tags></div>
