--- a/modules/contacts/addContact.htm
+++ b/modules/contacts/addContact.htm
@@ -1,31 +1,39 @@
-    <div class="input-field">
-        <label for="nick_input">Nick</label>
-        <input id="nick_input" type="text" class="validate" ng-model="contact.nick">
-    </div>
-    <div class="input-field">
-        <label for="fname_input">First Name</label>
-        <input id="fname_input" type="text" class="validate" ng-model="contact.fname">
-    </div>
-    <div class="input-field">
-        <label for="lname_input">Last Name</label>
-        <input id="lname_input" type="text" class="validate" ng-model="contact.lname">
-    </div>
-    <div class="input-field">
-        <label for="born_input">Born</label>
-        <input id="born_input" type="date" class="validate" ng-model="contact.born">
-    </div>
-    <div class="input-field">
-        <label for="sex_input">Gender</label>
-        <input id="sex_input" type="radio" class="validate" ng-model="contact.sex" value='Male'> Male
-        <input id="sex_input" type="radio" class="validate" ng-model="contact.sex" value='Female'> Female
-    </div>
-    <div class="input-field">
-        <label for="born_input">Pix</label>
-        <input id="born_input" type="text" class="validate" ng-model="contact.pix">
-    </div>
-    <div class="input-field">
-        <label for="tags_input">Tags</label>
-        <input id="tags_input" type="text" class="validate" ng-model="contact.tags">
-    </div>
-	{{contact}}
-	<div ng-click='addContact()'>Add Contact</div>
+<style>
+label {width: 30px}
+div.form-group input {width: 90%}
+</style>
+
+  <div class='form-group'>
+    <label for='InNick'>Nick</label>
+	<input type='text' ng-model='contact.nick' id='InNick' placeholder='Enter nick name'/>
+
+  </div>
+  <div class='form-group'>
+    <label for='InFname'>First</label>
+    <input type='text' ng-model='contact.fname' id='InFname' placeholder='Enter first name'/>
+  </div>
+  <div class='form-group'>
+    <label for='InLname'>Last</label>
+    <input type='text' ng-model='contact.lname' id='InLname' placeholder='Enter last name'/>
+  </div>
+  <div class='form-group'>
+    <label for='InBorn'>Born</label>
+    <input type='date' ng-model='contact.born' id='InBorn' placeholder='Enter first name'/>
+  </div>
+  
+  <div class='form-check form-check-inline'>
+	<label for='InSex'>Sex</label>
+	<input id='InSex' type='radio' class='validate' ng-model='contact.sex' value='Male'/> Male
+	<input id='InSex' type='radio' class='validate' ng-model='contact.sex' value='Female'/> Female
+  </div>
+  <div class='form-group'>
+	<label for='InPix'>Pix</label>
+	<input id='InPix' type='text' ng-model='contact.pix' placeholder='Enter file name of contact headshot'/>
+  </div>
+  <div class='form-group'>
+	<label for='InTags'>Tags</label>
+	<input id='InTags' type='text' ng-model='contact.tags' placeholder='Enter tags (uHHS ePB aELM nFOX rDiG oNXT)'/>
+  </div>
+
+	  <button class='btn btn-primary' ng-click='addContact()'>Add Contact</button>
+	  {{contact}}
