--- a/modules/tools/tags.htm
+++ b/modules/tools/tags.htm
@@ -1,9 +1,10 @@
 <h4>Tags</h4>
-eHHS<br />
+
 <pre>
 a Associate; Amigo
 c Client; Customer
 e Employee
+i Information, grouping
 n Neighbor
 o Organization;professional
 r Relative;family
@@ -24,6 +25,7 @@ ePB
 uHHS
 uRPI
 oNXT
+iOER
 </pre></td>
 <td><pre>
 nPLW
