--- a/index.htm
+++ b/index.htm
@@ -98,13 +98,14 @@
     <script src='assets/lib/slimscroll.min.js'></script>
     <!-- Bootstrap -->
     <script src='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js'></script>
-    <!-- Admin LTE v2.3.7 adminlte.io/docs -->
+    <!-- Admin LTE v2.3.7 -->
     <script src='assets/lib/admin_lte.js'></script>
     <!-- AngularJS -->
     <script src='https://ajax.googleapis.com/ajax/libs/angularjs/1.6.5/angular.min.js'></script>
     <script src='https://ajax.googleapis.com/ajax/libs/angularjs/1.6.5/angular-route.min.js'></script>
     <script src='https://ajax.googleapis.com/ajax/libs/angularjs/1.6.5/angular-cookies.min.js'></script>
     <script src='https://cdnjs.cloudflare.com/ajax/libs/angular-filter/0.5.16/angular-filter.min.js'></script>
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/2.5.0/ui-bootstrap-tpls.min.js'></script>
 
 
     <!-- Alerts Module -->
@@ -136,6 +137,7 @@
 
     <!-- Layout Module -->
     <script src="modules/layout/layout.module.js"></script>
+        <script src="modules/layout/modal/modal.service.js"></script>
         <script src="modules/layout/navigation.controller.js"></script>
 
     <!-- Login Module -->
