Grouped Module Definitions

--- a/index.htm
+++ b/index.htm
@@ -108,55 +108,51 @@
     <script src='https://cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/2.5.0/ui-bootstrap-tpls.min.js'></script>
 
 
+    <!-- Module Definitions -->
+    <script src="app.modules.js"></script>
+
     <!-- Alerts Module -->
-    <script src="modules/alerts/alerts.module.js"></script>
-        <script src="modules/alerts/alert.service.js"></script>
-        <script src="modules/alerts/alert-box.directive.js"></script>
+    <script src="modules/alerts/alert.service.js"></script>
+    <script src="modules/alerts/alert-box.directive.js"></script>
 
     <!-- Configuration Module -->
-    <script src="modules/configuration/configuration.module.js"></script>
-        <script src="modules/configuration/toggle.service.js"></script>
+    <script src="modules/configuration/toggle.service.js"></script>
 
     <!-- Contacts Module -->
-    <script src="modules/contacts/contacts.module.js"></script>
-        <script src="modules/contacts/contact.service.js"></script>
-        <script src="modules/contacts/filters/age.filter.js"></script>
-        <script src="modules/contacts/filters/born.filter.js"></script>
-        <script src="modules/contacts/directives/contact-image.directive.js"></script>
-        <script src="modules/contacts/directives/contact-info.directive.js"></script>
-        <script src="modules/contacts/directives/contact-tags.directive.js"></script>
-        <script src="modules/contacts/addContact.controller.js"></script>
-        <script src="modules/contacts/addDetail.controller.js"></script>
-        <script src="modules/contacts/detail.controller.js"></script>
-        <script src="modules/contacts/contacts.controller.js"></script>
-        <script src="modules/contacts/viewContact.controller.js"></script>
+    <script src="modules/contacts/contact.service.js"></script>
+    <script src="modules/contacts/filters/age.filter.js"></script>
+    <script src="modules/contacts/filters/born.filter.js"></script>
+    <script src="modules/contacts/directives/contact-image.directive.js"></script>
+    <script src="modules/contacts/directives/contact-info.directive.js"></script>
+    <script src="modules/contacts/directives/contact-tags.directive.js"></script>
+    <script src="modules/contacts/addContact.controller.js"></script>
+    <script src="modules/contacts/addDetail.controller.js"></script>
+    <script src="modules/contacts/detail.controller.js"></script>
+    <script src="modules/contacts/contacts.controller.js"></script>
+    <script src="modules/contacts/viewContact.controller.js"></script>
 
     <!-- Events Module -->
-    <script src="modules/events/events.module.js"></script>
-        <script src="modules/events/event.service.js"></script>
-        <script src="modules/events/event.controller.js"></script>
+    <script src="modules/events/event.service.js"></script>
+    <script src="modules/events/event.controller.js"></script>
 
     <!-- Layout Module -->
-    <script src="modules/layout/layout.module.js"></script>
-        <script src="modules/layout/modal/modal.service.js"></script>
-        <script src="modules/layout/navigation.controller.js"></script>
+    <script src="modules/layout/modal/modal.service.js"></script>
+    <script src="modules/layout/navigation.controller.js"></script>
 
     <!-- Login Module -->
-    <script src="modules/login/login.module.js"></script>
-        <script src="modules/login/jwt.service.js"></script>
-        <script src="modules/login/login.service.js"></script>
-        <script src="modules/login/login.controller.js"></script>
+    <script src="modules/login/jwt.service.js"></script>
+    <script src="modules/login/login.service.js"></script>
+    <script src="modules/login/login.controller.js"></script>
 
     <!-- Names Module -->
-    <script src="modules/name-linking/names.module.js"></script>
-        <script src="modules/name-linking/name.service.js"></script>
-        <script src="modules/name-linking/directives/nl-clemson.directive.js"></script>
-        <script src="modules/name-linking/directives/nl-google.directive.js"></script>
-        <script src="modules/name-linking/directives/nl-linked-in.directive.js"></script>
-        <script src="modules/name-linking/directives/nl-my-life.directive.js"></script>
+    <script src="modules/name-linking/name.service.js"></script>
+    <script src="modules/name-linking/directives/nl-clemson.directive.js"></script>
+    <script src="modules/name-linking/directives/nl-google.directive.js"></script>
+    <script src="modules/name-linking/directives/nl-linked-in.directive.js"></script>
+    <script src="modules/name-linking/directives/nl-my-life.directive.js"></script>
 
     <!-- Angular Main App Module -->
-    <script src='meshApp.js'></script>
+    <script src='app.js'></script>
 
 </div>
 </body>
