--- a/index.htm
+++ b/index.htm
@@ -115,8 +115,9 @@
     <script src="modules/alerts/alert.service.js"></script>
     <script src="modules/alerts/alert-box.directive.js"></script>
 
-    <!-- Configuration Module -->
-    <script src="modules/configuration/toggle.service.js"></script>
+    <!-- Common Module -->
+    <script src="modules/common/toggle.service.js"></script>
+    <script src="modules/common/modal.service.js"></script>
 
     <!-- Contacts Module -->
     <script src="modules/contacts/contact.service.js"></script>
@@ -135,7 +136,6 @@
     <script src="modules/events/event.controller.js"></script>
 
     <!-- Layout Module -->
-    <script src="modules/layout/modal/modal.service.js"></script>
     <script src="modules/layout/navigation.controller.js"></script>
 
     <!-- Login Module -->
