--- a/modules/contacts/addDetail-modal.htm
+++ b/modules/contacts/addDetail-modal.htm
@@ -4,7 +4,7 @@
 </style>
 
 <div class="modal-header">
-    <h3>Add Detail</h3>
+    <h3>Add Detail for {{contact.fname}} {{contact.lname}}</h3>
 </div>
 <div class="modal-body">
     <div class='form-group'>
