--- a/modules/contacts/directives/contact-info.directive.htm
+++ b/modules/contacts/directives/contact-info.directive.htm
@@ -18,7 +18,7 @@
         <i ng-if='detail.areacode' style='display: inline-block; text-overflow: clip'>{{detail.areacode}}</i>
     </li>
 
-    <!-- Add New Tag Button -->
+    <!-- Add New Detail Button -->
     <li>
         <div class='mg-label clickable' ng-click="showDetailModal()">
             <i class="fa fa-plus"></i>
