--- a/index.htm
+++ b/index.htm
@@ -101,7 +101,7 @@
     <!-- Admin LTE v2.3.7 -->
     <script src='assets/lib/admin_lte.js'></script>
     <!-- AngularJS -->
-    <script src='https://ajax.googleapis.com/ajax/libs/angularjs/1.6.5/angular.min.js'></script>
+    <script src='https://ajax.googleapis.com/ajax/libs/angularjs/1.6.5/angular.js'></script>
     <script src='https://ajax.googleapis.com/ajax/libs/angularjs/1.6.5/angular-route.min.js'></script>
     <script src='https://ajax.googleapis.com/ajax/libs/angularjs/1.6.5/angular-cookies.min.js'></script>
     <script src='https://cdnjs.cloudflare.com/ajax/libs/angular-filter/0.5.16/angular-filter.min.js'></script>
