--- a/modules/contacts/detail-modal.htm
+++ b/modules/contacts/detail-modal.htm
@@ -4,24 +4,23 @@
 </style>
 
 <div class="modal-header">
-    <h3>Add Detail for {{modalOptions.contact.fname}} {{modalOptions.contact.lname}}</h3>
+    <h3 ng-bind="modalOptions.title"></h3>
 </div>
 <div class="modal-body">
     <div class='form-group'>
         <label for='InType'>Type</label>
-        <input type='text' ng-model='detail.type' id='InType' placeholder='Enter detail type (cph, eml, url)'/>
-
+        <input type='text' ng-model='modalOptions.detail.type' id='InType' placeholder='Enter detail type (cph, eml, url)'/>
     </div>
     <div class='form-group'>
         <label for='InInfo'>Info</label>
-        <input type='text' ng-model='detail.info' id='InInfo' placeholder='Enter detail information'/>
+        <input type='text' ng-model='modalOptions.detail.info' id='InInfo' placeholder='Enter detail information'/>
     </div>
 </div>
 <div class="modal-footer">
     <button type="button" class="btn" data-ng-click="modalOptions.close()">
         Cancel
     </button>
-    <button class="btn btn-primary" data-ng-click="modalOptions.ok(detail)">
-        Add Detail
+    <button class="btn btn-primary" data-ng-click="modalOptions.ok(modalOptions.detail)">
+        {{modalOptions.actionButtonText}}
     </button>
 </div>
