Create & Update Group Details
Still supports person details

--- a/modules/contacts/directives/contact-info.directive.htm
+++ b/modules/contacts/directives/contact-info.directive.htm
@@ -18,7 +18,7 @@
 
     <!-- Add New Detail Button -->
     <li>
-        <div class='mg-label-long clickable' ng-click="showCreateDetailModal()" title='add {{contact.type}} detail'>
+        <div class='mg-label-long clickable' ng-click="showCreateDetailModal()" title='add {{group ? "group" : "contact"}} detail'>
             <b><i class="fa fa-plus"></i> Add Detail</b>
         </div>
     </li>
