--- a/modules/contacts/viewDetail.htm
+++ b/modules/contacts/viewDetail.htm
@@ -7,12 +7,12 @@
 		<div class='media-body'>
 			<b class="title" ng-class="{'male-color': contact.sex.toUpperCase() == 'M', 'female-color': contact.sex.toUpperCase() == 'F'}">
 				{{contact.fname}} {{contact.lname}}
-				<i ng-if='contact.nick'> &raquo; {{contact.nick}}</i>
+				<i ng-if='contact.nick'> &raquo; {{contact.nick}}</i> <i class='fa fa-pencil-square' title='edit contact'></i>
 			</b>
 			<div style='padding-top: 3px'>
-			<nl-linked-in fname='contact.fname' lname='contact.lname'></nl-linked-in>
-			<nl-clemson fname='contact.fname' lname='contact.lname'></nl-clemson>
-			<nl-google fname='contact.fname' lname='contact.lname'></nl-google>
+			<nl-linked-in fname='contact.fname' lname='contact.lname'></nl-linked-in> &nbsp;
+			<nl-clemson fname='contact.fname' lname='contact.lname'></nl-clemson> &nbsp;
+			<nl-google fname='contact.fname' lname='contact.lname'></nl-google> &nbsp;
 			<nl-my-life fname='contact.fname' lname='contact.lname'></nl-my-life></div>
 
 			<div style='padding-top: 3px'>{{contact.born | bornFilter}}</div>
@@ -33,23 +33,23 @@
 		<div ng-if='group.relation && group.relation != "h"'><b>title</b>: {{group.relation}}</div>
 		<div ng-if='group.street'>{{group.street}}</div>
 
-		<div ng-if='group.city'>{{group.city}}, {{group.state}} {{group.zip}} {{group.country}}</div>
+		<div ng-if='group.city'>{{group.city}}, {{group.state}} {{group.zip}} {{group.country}}
 		<a href='http://www.google.com/maps/place/{{group.street}} {{group.city}} {{group.state}} {{group.zip}} {{group.country}}' target='_blank'>
-			<img src='assets/img/pix/map-pin.png' alt='map' title='map location'/>
+			<i class='fa fa-map-marker'></i>
 		</a>
-
+		</div>
 		<contact-info details='group.details' contact='contact' group='group'></contact-info>
 	</div>
 </div>
 
-<div class='mg-label-long clickable' ng-click="showCreateGroupModal()" title='add Group'>
-	<b><i class="fa fa-plus"></i> Add Group</b>
+<div class='mg-label-long clickable' ng-click='showCreateGroupModal()' title='add Group'>
+	<b><i class='fa fa-plus-circle'></i> Add Group</b>
 </div>
 
 <div ng-repeat="note in notes | orderBy: '-mdate' ">
 	<div class='mg-note' title='edit Note'><b class='mg-title'>{{note.mdate}}:</b> {{note.note}}</div>
 </div>
 
-<div class='mg-label-long clickable' ng-click="showCreateNoteModal()" title='add Note'>
-	<b><i class="fa fa-plus"></i> Add Note</b>
+<div class='mg-label-long clickable' ng-click='showCreateNoteModal()' title='add Note'>
+	<b><i class='fa fa-plus-circle'></i> Add Note</b>
 </div>
